# MarinVPN

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile.marinvpn.reproducible  Dockerfile.reproducible  Dockerfile.windows.reproducible  docker-compose.yml  gemini.md  marinvpn_config.json  rust-toolchain.toml
assets/: main.css  tailwind.css
docs/: ARCHITECTURE.md  Caddyfile.example  PRODUCTION.md  REPRODUCIBLE.md  nginx.example.conf
marinvpn/: .gitignore  Cargo.toml  Dioxus.toml  tailwind.config.js  tailwind.css
marinvpn-common/: Cargo.toml
marinvpn-common/src/: lib.rs  tests.rs
marinvpn-server/: .gitignore  Cargo.toml  README.md
marinvpn-server/config/: default.toml
marinvpn-server/migrations/: 20260131000000_initial_schema.sql  20260131000001_add_peers.sql  20260131000001_seed_data.sql  20260201000000_device_attestation_pubkey.sql  20260201000002_ephemeral_state.sql  20260201000003_unique_salting.sql
marinvpn-server/src/: config.rs  error.rs  lib.rs  main.rs  vpn_config.rs
marinvpn-server/src/handlers/: auth.rs  mod.rs  vpn.rs
marinvpn-server/src/models/: mod.rs
marinvpn-server/src/services/: auth.rs  db.rs  mod.rs  vpn.rs
marinvpn-server/tests/: auth_tests.rs
marinvpn/.github/workflows/: ci.yml
marinvpn/src/: components.rs  data.rs  error.rs  hooks.rs  i18n.rs  icons.rs  layouts.rs  lib.rs  main.rs  models.rs  state.rs  storage.rs  window.rs
marinvpn/src/components/: connection_overlay.rs  map.rs  toast.rs
marinvpn/src/components/ui/: button.rs  mod.rs  modal.rs  row.rs
marinvpn/src/hooks/: mod.rs  tests.rs  use_account.rs  use_connection.rs  use_servers.rs
marinvpn/src/services/: apps.rs  auth.rs  mod.rs  servers.rs  vpn.rs
marinvpn/src/views/: account.rs  app_info.rs  dashboard.rs  devices.rs  locations.rs  login.rs  mod.rs  support.rs
marinvpn/src/views/settings/: mod.rs  ui.rs  view.rs  vpn.rs
marinvpn/tests/: storage_tests.rs
scripts/: dev-db.ps1  dev-db.sh  test-server.ps1  test-server.sh
src/: components.rs  data.rs  hooks.rs  layouts.rs  main.rs  models.rs  state.rs  storage.rs  window.rs
src/components/: connection_overlay.rs  map.rs
src/components/ui/: button.rs  mod.rs  modal.rs  row.rs
src/views/: account.rs  app_info.rs  dashboard.rs  devices.rs  locations.rs  login.rs  mod.rs  support.rs
src/views/settings/: mod.rs  ui.rs  view.rs  vpn.rs
