[package]
name = "marinvpn"
version = "0.1.0"
authors = ["hellich"]
edition = "2021"

[dependencies]
dioxus = { version = "0.7.1", features = ["router", "desktop"] }
tokio = { version = "1", features = ["full"] }
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tray-icon = "0.19.2"
image = "0.25.5"
tao = "0.30.0"
directories = "6.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server"]
