[workspace]
members = [
    "marinvpn",
    "marinvpn-server",
    "marinvpn-common",
]
resolver = "2"

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimizations
panic = "abort"     # Reduce binary size
strip = true        # Strip symbols automatically
