[package]
name = "marinvpn-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
sha2 = "0.10"
blake2 = "0.9"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-full", "timeout"] }
tower = { version = "0.4", features = ["util"] }
tower_governor = "0.4"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
async-trait = "0.1"
dotenvy = "0.15"
lazy_static = "1.4"
hex = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "macros", "chrono", "migrate"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9.3"
rsa = { version = "0.9", features = ["sha2", "hazmat"] }
ipnet = "2.9"
ml-kem = "0.2"
validator = { version = "0.19", features = ["derive"] }
utoipa = { version = "5.0", features = ["chrono"] }
utoipa-swagger-ui = { version = "8.0", features = ["axum"] }
axum-prometheus = "0.7"
config = { version = "0.14", features = ["toml"] }
anyhow = "1.0.100"
argon2 = "0.5.3"
subtle = "2.5"
password-hash = "0.5.0"
ring = "0.17"
once_cell = "1.19"
marinvpn-common = { path = "../marinvpn-common", features = ["openapi", "validation", "db"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
